// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`User Service 正常系 createUser は新しいユーザーを作成して返す 1`] = `
{
  "id": 3,
  "name": "Charlie",
}
`;

exports[`User Service 正常系 getUser は指定されたIDのユーザーを返す 1`] = `
{
  "id": 1,
  "name": "Alice",
}
`;

exports[`User Service 正常系 getUsers はユーザー一覧を返す 1`] = `
[
  {
    "id": 1,
    "name": "Alice",
  },
  {
    "id": 2,
    "name": "Bob",
  },
]
`;

exports[`User Service 正常系 updateUser は指定されたIDのユーザーを更新して返す 1`] = `
{
  "id": 1,
  "name": "Alice Updated",
}
`;
